# src/ts/types/errorCodes.ts
@@ -1,8 +1,8 @@
 enum ErrorCodes {
-  STATUS = 'STATUS',
-  EMAIL_ALREADY_TAKEN = 'EMAIL_ALREADY_TAKEN',
-  INVALID_CREDENTIAL = 'INVALID_CREDENTIAL',
-  NOT_FOUND = 'NOT_FOUND'
+  STATUS,
+  EMAIL_ALREADY_TAKEN,
+  INVALID_CREDENTIAL,
+  NOT_FOUND
 }
 
 export default ErrorCodes;
